# iptv-handler

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.develop  Dockerfile.migrations  Dockerfile.production  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-sync.yml
db/: Dockerfile
db/scripts/: init_db.sh
gui/: .eslintrc.json  .prettierrc  README.md  package.json  webpack.config.ts
gui/public/: index.html
gui/src/: App.tsx
gui/src/components/HelloWorld/: index.tsx
gui/src/components/Navbar/: index.tsx  styles.tsx
gui/src/components/PageBody/: index.tsx  styles.tsx
gui/src/components/helpers/: ItemWrapper.tsx  PageText.tsx
gui/src/pages/: index.tsx
gui/src/styles/: global.ts
server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.develop  api.rs  parser.rs
server/api/: Cargo.toml
server/api/src/: lib.rs
server/api/src/handlers/: mod.rs  provider.rs  root.rs
server/api/src/models/: mod.rs
server/api/src/routes/: mod.rs  provider.rs
server/db/: Cargo.toml  sqlx-data.json
server/db/migrations/: 1_init.sql
server/db/src/: lib.rs
server/db/src/models/: attribute.rs  extinf.rs  mod.rs  provider.rs
server/iptv/: Cargo.toml
server/iptv/src/: lib.rs  parser.rs  provider.rs
server/iptv/src/m3u/: builder.rs  fetcher.rs  mod.rs  models.rs  parser.rs
server/migrations/: 1_init.sql
server/rest-client/: Cargo.toml
server/rest-client/src/: lib.rs
server/server/: Cargo.toml
server/server/src/: app.rs  environment.rs  main.rs
server/src/: db.rs  main.rs  parser.rs  server.rs
src/: .gitignore  .ignore  Cargo.toml  api.rs  main.rs  parser.rs  server.rs  sqlx-data.json
src/api/: Cargo.toml
src/api/src/: filters.rs  lib.rs  utils.rs
src/api/src/filters/: xtream.rs
src/api/src/handlers/: m3u.rs  mod.rs  provider.rs  proxy.rs  xtream.rs
src/api/src/models/: error.rs  mod.rs  provider.rs  xtream.rs
src/api/src/routes/: m3u.rs  mod.rs  provider.rs  proxy.rs  root.rs  xtream.rs
src/api/src/services/: mod.rs  provider.rs  proxy.rs  xtream.rs
src/api/src/utils/: mod.rs  proxy.rs  response.rs  url.rs  xml.rs
src/db/: Cargo.toml  sqlx-data.json
src/db/migrations/: 1_init.sql
src/db/src/: lib.rs
src/db/src/models/: attribute.rs  extinf.rs  group.rs  hls_url.rs  m3u.rs  mod.rs  provider.rs  xmltv_url.rs  xtream_metadata.rs  xtream_url.rs
src/db/src/services/: group.rs  mod.rs  provider.rs
src/iptv/: Cargo.toml
src/iptv/src/: lib.rs  models.rs
src/iptv/src/m3u/: builder.rs  fetcher.rs  mod.rs  parser.rs  tools.rs
src/rest-client/: Cargo.toml
src/rest-client/src/: lib.rs
src/server/: Cargo.toml
src/server/src/: app.rs  environment.rs  jobs.rs  logger.rs  main.rs  tools.rs
