[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.73"
url = "2.2.2"
rest-client = { path = "../rest-client" }
db = { path = "../db" }