[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
url = "2.2.2"
db = { path = "../db" }
iptv = { path = "../iptv" }
api = { path = "../api" }
rest-client = { path = "../rest-client" }


