[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
async-trait = "0.1.52"
url = "2.2.2"
anyhow = "1.0.53"
futures = "0.3.21"
log = "0.4.14"
sqlx = { version = "0.6.2", default-features = false, features = [ "mysql" ] }
chrono = { version = "0.4.19", features = [ "time" ] }
tokio = { version = "1", features = ["fs"] }
tokio-util = { version = "0.7.3", features = ["io"] }
reqwest = { version = "0.11.12", features = ["stream", "json"] } 
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
serde_yaml = "0.8.26"
async-recursion = "1.0.4"
quick-xml = { version = "0.28.2", features = ["async-tokio", "escape-html"] }
rest-client = { path = "../rest-client" }
db = { path = "../db" }
iptv = { path = "../iptv" }
