[package]
name = "db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.13", default-features = false, features = [ "macros", "mysql", "migrate", "runtime-tokio-native-tls", "offline" ] }
async-trait = "0.1.52"
serde = { version = "1.0.132", features = ["derive"] }
log = "0.4.14"
anyhow = "1.0.53"
futures = "0.3.21"


