[package]
name = "iptv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
regex = "1.5.4"
log = "0.4.14"
anyhow = "1.0.53"
itertools = "0.10.3"
chrono = "0.2"
tokio = { version = "1", features = ["fs"] }
rest-client = { path = "../rest-client" }
db = { path = "../db" }
