[package]
name = "rest-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
warp = "0.3.2"
reqwest = { version = "0.11.12", features = ["stream"] } 
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
futures-util = "0.3.25"
log = "0.4.14"
anyhow = "1.0.53"