[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.82"
url = { version = "2.2.2", features = ["serde"] }
log = "0.4.14"
env_logger = "0.9.0"
envy = "0.4"
tokio-cron-scheduler = "0.7.6"
chrono = { version = "0.4.19", features = ["serde", "time"] }
anyhow = "1.0.53"
db = { path = "../db" }
iptv = { path = "../iptv" }
api = { path = "../api" }
rest-client = { path = "../rest-client" }


